EogWindow: Add stop mark to zoom slider at 100% zoom

https://bugzilla.gnome.org/show_bug.cgi?id=746132